--- a/index.html
+++ b/index.html
@@ -8,28 +8,35 @@
 </head>
 <body>
 
+    <p id="resultado" ></p>
+    <button onClick= "clearCons()"> Limpiar la consola y el resultado</button>
 
     <div>
         <h2>EJERCICIO 1</h2>
-        <p>ingrese su nombre</p>
+        <p>Ingrese su nombre</p>
         <input type="text" name="nombre" id ="nombre">
-        <p>ingrese su fecha de nacimiento</p>
+        <p>Ingrese su fecha de nacimiento</p>
         <input type="date" name="numero" id="numero" >
         <button onClick= "Ejercicio1()"> Calcular edad</button>
-        <p id="resultado" ></p>
+        
     </div>    
 
 
     <div>
         <h2>EJERCICIO 2</h2>
-        <button id = "Fruta" onClick="tirarFruta()">Tirar Fruta</button>
+        <button id = "Fruta" onClick="Ejercicio2()">Tirar Fruta</button>
     </div>
-    <h2>EJERCICIO 3</h2>
-        <button id = "Comparar" onclick="comparandoDyT()">Comparando datos y tipos</button>
 
-    <h2>EJERCICIO 4</h2>
+
+    <div>
+        <h2>EJERCICIO 3</h2>
+        <button id = "Comparar" onClick="Ejercicio3()">Comparando datos y tipos</button>
+    </div>
+
+    <div>
+        <h2>EJERCICIO 4</h2>
         <button id = "Objeto" onclick="crearObjeto()">Crear objeto</button>
-
+    </div>
     <h2>EJERCICIO 5</h2>
         <button id = "Doble" onclick="duplicarEl()">Duplicar elementos</button>
 
