--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </div>
 
     <div>
-    
-    <h2>EJERCICIO 6</h2>
-        <button id = "Triangulo" onclick="triAste()">Triangulo de asteriscos</button>
+        <h2>EJERCICIO 6 A</h2>
+        <button id = "Triangulo" onclick="triAste()">Triangulo de asteriscos no centrado</button>
+
     </div>
 <div>        
     <h2>EJERCICIO 7</h2>
