--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 
     <div>
         <h2>EJERCICIO 6 A</h2>
-        <button id = "Triangulo" onclick="triAste()">Triangulo de asteriscos no centrado</button>
+        <button id = "Triangulo" onClick="Ejercicio6A()">Triangulo de asteriscos no centrado</button>
+        <h2>EJERCICIO 6 B</h2>
+        <button id = "Triangulo" onClick="Ejercicio6B()">Triangulo de asteriscos no centrado</button>
 
     </div>
 <div>        
