--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         </div>
         <div>
             <h2>EJERCICIO 9</h2>
+            <input type="text" id="txt" placeholder="Texto">
+            <input type="number" id="cant" placeholder="cant caract">
+            <p>Ingresá una cadena de texto y número. Se muestra la cadena de texto cortada hasta esa cantidad de caracteres.</p>
             <button onClick= "Ejercicio9()"> Cortar Texto</button>
         </div> 
         <div>
@@ -86,6 +89,8 @@
         </div>
         <div> 
             <h2>EJERCICIO 11</h2>
+            <input type="text" id="pedido" placeholder="Ej: Pizza:15.5,Hamburguesa:8.75,Bebidas:4.25">
+            <p>Ingresá lista de objetos pedidos junto con sus respectivos totales, separados por coma en formato "nombre:total". Se mostrará la recaudacuion total tras la suma de los montos de los pedidos.</p>
             <button id = "Calcu" onClick="Ejercicio11()">Calcular Recaudacion</button>
         </div>
         <script src="ejercicios.js"></script>
